GNOME Bugzilla – Bug 678331
Sending a file from the conversation window silently fails
Last modified: 2012-06-26 09:16:08 UTC
With Empathy 3.4.2.1 (Debian), choose Contact → Send File, or drag a file into the conversation window. Nothing happens. The debug log shows this: empathy/Ft-DEBUG: 18/06/12 15:56:47.322700: empathy_ft_handler_new_outgoing: New handler outgoing empathy/Ft-DEBUG: 18/06/12 15:56:47.341650: ft_handler_gfile_ready_cb: Got GFileInfo. empathy/Ft-DEBUG: 18/06/12 15:56:47.344687: set_content_hash_type_from_classes: Hash enabled True; setting content hash type as 1 GLib-GObject-WARNING: 18/06/12 15:56:47.344722: instance of invalid non-instantiatable type `(null)' GLib-GObject-CRITICAL: 18/06/12 15:56:47.344737: g_signal_emit_valist: assertion `G_TYPE_CHECK_INSTANCE (instance)' failed and here's a backtrace: Program received signal SIGTRAP, Trace/breakpoint trap. g_logv (log_domain=0x7f501d66bf6c "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=0x7f501d3cd6e2 "%s: assertion `%s' failed", args1=args1@entry=0x7fff3c417ec8) at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.h:101 101 /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.h: No such file or directory. (gdb) bt
+ Trace 230384
FT from empathy-chat is meant to be disabled because of bug #640513 I guess I accidentally re-enabled it in 3.4 when refactoring some code.
Created attachment 217195 [details] [review] don't display 'Send file' menu item in empathy-chat We only support requesting FT channel in the same process as the FT handler.
Created attachment 217196 [details] [review] chat-window: disable file transfer DnD It's not supported at the moment.
it's sad to not support this, but since it does not work anyway, +1.
Attachment 217195 [details] pushed as 13d6036 - don't display 'Send file' menu item in empathy-chat Attachment 217196 [details] pushed as 8d84c17 - chat-window: disable file transfer DnD