don't display 'Send file' menu item in empathy-chat

We only support requesting FT channel in the same process as the FT handler.

https://bugzilla.gnome.org/show_bug.cgi?id=678331